--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = mysuperdupersite
+PRODUCT_NAME = portfolio
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = jajaja.jkt.mysuperdupersite
+PRODUCT_BUNDLE_IDENTIFIER = com.jktportfolio.portfolio
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 jajaja.jkt. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 com.jkt_portfolio. All rights reserved.
