sections page - top bar

--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"assets/fonts/CarroisGothicSC-Regular.ttf":["assets/fonts/CarroisGothicSC-Regular.ttf"],"assets/fonts/Nunito-Italic.ttf":["assets/fonts/Nunito-Italic.ttf"],"assets/fonts/Nunito.ttf":["assets/fonts/Nunito.ttf"]}
+{"assets/fonts/CarroisGothicSC-Regular.ttf":["assets/fonts/CarroisGothicSC-Regular.ttf"],"assets/fonts/Nunito-Italic.ttf":["assets/fonts/Nunito-Italic.ttf"],"assets/fonts/Nunito.ttf":["assets/fonts/Nunito.ttf"],"assets/img/cv.png":["assets/img/cv.png"],"assets/img/github.png":["assets/img/github.png"],"assets/img/linkedin.png":["assets/img/linkedin.png"]}
