--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   url_launcher: ^6.1.14
+  page_transition: ^2.0.9
 
 
   # The following adds the Cupertino Icons font to your application.
