--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Build
         run: flutter build web
 
+      - name: Make CNAME
+        run: echo 'jkt.fyi' >> ./build/web/CNAME
+
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
