--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   url_launcher: ^6.1.14
   page_transition: ^2.0.9
+  go_router: ^14.2.7
 
 
   # The following adds the Cupertino Icons font to your application.
