--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   url_launcher: ^6.1.14
   go_router: ^14.2.7
+  file_saver: ^0.2.14
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -65,6 +66,7 @@ flutter:
     - assets/img/linkedin.png
     - assets/img/paper.png
     - assets/img/cv.png
+    - assets/img/mail.png
     - assets/img/me.jpg
     - assets/img/me-circle.png
     - assets/Tripathy_Jatin_CV.pdf
