--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   url_launcher: ^6.1.14
   go_router: ^14.2.7
   file_saver: ^0.2.14
+  wave: ^0.2.2
 
 
   # The following adds the Cupertino Icons font to your application.
